[package]
name = "art"
version.workspace = true
authors.workspace = true
edition.workspace = true
license-file.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.31"
nix = { version = "0.30.1", features = ["event"] }
