[package]
name = "sched-art"
version.workspace = true
authors.workspace = true
edition.workspace = true
license-file.workspace = true

[dependencies]
anyhow = "1.0"
ctrlc = "3.5"
libbpf-rs = "0.25"
log = "0.4"
nix = { version = "0.31", features = ["process"] }
scx_utils = "1.0"
simplelog = "0.12"
thiserror = "2.0"

[build-dependencies]
scx_cargo = "1.0"
